kubernetes/apps/sabnzbd/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sabnzbd
  namespace: jellyfin
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: sabnzbd
  template:
    metadata:
      namespace: jellyfin
      labels:
        app: sabnzbd
    spec:
      nodeSelector:
        topology.kubernetes.io/zone: Dagobah
      containers:
        - name: sabnzbd
          image: lscr.io/linuxserver/sabnzbd:4.5.5-ls238
          ports:
            - name: http
              containerPort: 8080
          volumeMounts:
            - name: config
              mountPath: /config
            - name: data
              mountPath: /data/downloads
              subPath: downloads
            - name: data
              mountPath: /data/incomplete-downloads
              subPath: incomplete-downloads
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: sabnzbd-config
        - name: data
          persistentVolumeClaim:
            claimName: jellyfin-media
