kubernetes/apps/sabnzbd/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sabnzbd
  namespace: jellyfin
  annotations:
    external-mdns.blakecovarrubias.com/hostnames: foo
    external-mdns.blakecovarrubias.com/without-namespace: "true"
spec:
  type: ClusterIP
  selector:
    app: sabnzbd
  ports:
    - name: web
      port: 80
      targetPort: http
